[package]
name = "dino-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.93"
arc-swap = "1.7.1"
axum = { version = "0.7.9", features = ["http2", "query", "tracing"] }
dashmap = "6.1.0"
indexmap = { version = "2.6.0", features = ["serde"] }
matchit = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
thiserror = "2.0.3"
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
